test/input/negative/syntax_error.ls
// Missing closing brace
let data = {
    name: "test",
    value: 42
// Missing }

let result = if (x > 0) "positive"
// Missing else clause
